# ea-woc-league

./: .cursorrules  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: live-tests.yml  tests.yml
live_tests/: analyze_data_structure.py  analyze_season_structure.py  fetch_and_track_stats.py  fetch_ea_data.py  game_integration.py  request_game_integration.py  stats_tracking.py  track_stats.py  track_stats_output
live_tests/output/: data_structure.json  response.json  season_structure.json  season_summary.txt
pythonversoin/: first_element.json  match_0.json  match_1.json  match_2.json  match_3.json  match_4.json  test_auto_model_gen.py
src/ea_nhl_stats/: __init__.py
src/ea_nhl_stats/api/: __init__.py  get_games_request.py
src/ea_nhl_stats/league/: __init__.py  context.py  events.py
src/ea_nhl_stats/models/: __init__.py  club.py
src/ea_nhl_stats/services/: club_data_service.py
src/ea_nhl_stats/utils/: club_parser.py
src/ea_nhl_stats/validators/: __init__.py  (+2 more)
tests/: conftest.py
tests/api/: test_get_games_request.py
tests/json/: club_response.json  ea_response.json  response.json
tests/league/: __init__.py  test_context.py  test_events.py
tests/models/: test_club.py  test_club_data.py  test_club_info.py  test_game_info.py
tests/services/: test_club_data_service.py
tests/utils/: test_club_parser.py
tests/validators/: test_match_type_validator.py  test_platform_validator.py
tests/web/: test_web_request.py
tests_v2/league/: __init__.py  test_game_stats_integration.py  test_stats_tracking.py
(+80 files in other folders)
