[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ea-nhl-stats"
version = "0.1.0"
description = "Python package for parsing and analyzing NHL EASHL club statistics"
authors = [
    {name = "Spencer Presley", email = "spencerpresley@gmail.com"},
]
dependencies = [
    "pydantic>=2.5.2",
    "shortuuid>=1.0.11",
    "plotly>=5.18.0",
    "requests>=2.31.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Linting and Formatting
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.0",
    
    # Type checking
    "types-requests>=2.31.0",
    
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # Development tools
    "ipython>=8.17.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.5.0",
]

[tool.pdm]
distribution = true

# [tool.pdm.dev-dependencies]
# dev = [".[dev]"]

[tool.pytest.ini_options]
addopts = "--cov=ea_nhl_stats --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]